@@ -1,3 +1,6 @@
+2018-02-21 19:42:00 Alessandro De Salvo
+        * Improved timestamp mechanism
+
 2018-02-21 14:18:00 Alessandro De Salvo
 	* Refactoring the images to build from the minimal sources
 
